# chainreactor-node

./: Cargo.toml
.github/workflows/: build-compute.yml  build-doom.yml  build-release.yml
compute-daemon/: Cargo.toml
compute-daemon/src/: main.rs  rpc.rs  scale.rs
node/: Cargo.toml
node/src/: chain_spec.rs  rpc.rs
pallets/compute-marketplace/: Cargo.toml
pallets/compute-marketplace/src/: engine.rs  lib.rs  mock.rs  offchain.rs  tests.rs  types.rs
pallets/worker/: Cargo.toml
pallets/worker/src/: lib.rs  mock.rs  tests.rs  types.rs
primitives/common/src/: constants.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  proxy_config.rs
runtime/src/third_party_weights/: mod.rs
scripts/: cr-executor.py  deploy-compute-demo.sh  test-compute-demo.mjs  test-cr-compute.mjs  test-cr-worker.mjs
worker-daemon/: Cargo.toml
worker-daemon/src/: main.rs
