[package]
name = "cr-compute"
version = "0.1.0"
edition = "2021"
description = "Chainreactor Compute Daemon — watches chain for assigned jobs, executes them natively, submits results"

[[bin]]
name = "cr-compute"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.38", features = ["full"] }

# HTTP client (for RPC + spec downloads)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Hashing
blake2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# SCALE encoding (for extrinsic construction)
parity-scale-codec = "3.6"

# Hashing (twox128 for storage key construction)
twox-hash = "1.6"
