[package]
name = "pallet-worker"
description = "Worker node pallet — solution groups, attestation voting, SLA-based rewards"
publish = false

version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive", "serde"] }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
sp-std = { workspace = true }
sp-io = { workspace = true }

# Chainreactor pallets (read-only access to node-manager storage)
pallet-node-manager = { workspace = true }

# Optional imports for benchmarking
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
sp-io = { workspace = true }
pallet-balances = { workspace = true, features = ["insecure_zero_ed", "default"] }
pallet-timestamp = { workspace = true }

[features]
default = ["std"]
std = [
	"scale-info/std",
	"parity-scale-codec/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-std/std",
	"log/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking?/std",
	"pallet-node-manager/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
